[package]
name = "mpl-token-auth-rules"
version = "1.5.1"
description = "MPL Token Authorization Rules that can be used to restrict common token operations"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-token-auth-rules.git"
license-file = "../../LICENSE"
edition = "2021"
readme = "../../README.md"
keywords = ["nft", "metaplex", "solana", "blockchain"]

[dependencies]
borsh = ">= 0.9.3, < 0.11"
bytemuck = { version = "1.20", features = ["derive"] }
mpl-token-metadata-context-derive = "0.2.1"
num-derive = "0.3.3"
num-traits = "0.2"
rmp-serde = "1.1.1"
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "1.14.0", optional = true }
shank = "0.4.2"
solana-program = "2.1.4"
solana-zk-token-sdk = "2.1.4"
thiserror = "1.0"

[features]
no-entrypoint = []
serde-with-feature = ["serde_with"]
test-sbf = []

[dev-dependencies]
assert_matches = "1.5.0"
serde_json = "1.0.87"
solana-logger = "2.1.4"
solana-program-test = "2.1.4"
solana-sdk = "2.1.4"
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
spl-token = { version = "7", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.

[profile.test]
debug = 0   #  Reduce space usage to avoid CD/CD fails when running test.
